# Prg2_Trees

./: CMakeLists.txt  README.md  main.cpp  test.cpp
libs/: arvore-impl.h  arvore.h  nodo_arvore-impl.h  nodo_arvore.h
tests/: portugues.txt
